services/ingress/k8s/ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kooky-ingress
  annotations:
    nginx.org/grpc-services: "game-session"
    nginx.org/websocket-services: "game-session"
    nginx.org/ssl-services: "game-session"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: “true”
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header Access-Control-Allow-Origin $http_origin;
      add_header Access-Control-Allow-Methods "POST, GET, OPTIONS";
      add_header Access-Control-Allow-Credentials true;
spec:
  tls:
  - hosts:
    - dev.kooky.app
    secretName: tls-certificate
  rules:
  - host: dev.kooky.app
    http:
      paths:
      - path: /api/v1/session
        backend:
          serviceName: game-session
          servicePort: 443
      - path: /ws
        backend:
          serviceName: game-session
          servicePort: 8008
      - path: /wss
        backend:
          serviceName: game-session
          servicePort: 8008
      - path: /game_session.GameSessionService
        backend:
          serviceName: game-session
          servicePort: 50051
